<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.activities.autorization.RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:onClick="onClickBack"
        android:background="@drawable/icon_arrow"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/please_sign_the_form"
        android:fontFamily="@font/nunito_semi_bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fields_should_not_be_empty"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:fontFamily="@font/nunito_light"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:fontFamily="@font/nunito_semi_bold"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/etUserName"
        app:layout_constraintTop_toBottomOf="@+id/tvSubTitle" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:hint="@string/enter_your_user_name"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        android:paddingTop="5dp"
        android:textColorHint="#4D000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_semi_bold"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etUserName" />


    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:paddingTop="5dp"
        android:textColorHint="#4D000000"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/background_login_button"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/nunito_semi_bold"
        android:onClick="onClickSignIn"
        android:text="@string/create_account"
        android:layout_marginBottom="40dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/nunito_light"
        android:text="account exist?"
        android:textColor="#4D000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:onClick="onClickLogIn"
        android:fontFamily="@font/nunito_semi_bold"
        android:text="@string/sign_in"
        android:layout_marginStart="4dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>